# fullstack-interview-test

./: .env.default  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: repo.py  settings.py  urls.py
backend/app/conf/: nginx  start.sh  supervisord.conf
backend/repos/: api.py  models.py  serializers.py
backend/repos/migrations/: 0001_initial.py
backend/utils/: mixins.py
